--- a/Notes/Notes/Views/Account/Login.cshtml
+++ b/Notes/Notes/Views/Account/Login.cshtml
@@ -1,36 +1,28 @@
 ﻿@model Notes.Models.LoginModel
 
-@{
-    ViewBag.Title = "Login";
-}
-
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Login, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Login, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Login, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!------ Include the above in your HEAD tag ---------->
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Войти" class="btn btn-default" />
-                <input type="button" value="Зарегистрироваться" class="btn btn-default" onclick="@("window.location.href='" + @Url.Action("Registry", "Account") + "'");"  />
+    <div class="wrapper fadeInDown">
+        <div id="formContent">
+            <!-- Tabs Titles -->
+            <!-- Icon -->
+            <div class="fadeIn first">
+                <h2>Добро пожаловать</h2>
             </div>
+            <!-- Login Form -->
+            <form>
+                <input type="text" id="Login" class="fadeIn second" name="login" placeholder="Login">
+                <input type="password" id="Password" class="fadeIn third" name="password" placeholder="Password">
+                <input type="submit" class="fadeIn fourth" value="Log In">
+                <input type="button" class="fadeIn fourth ButtonRegistry" value="Sign Up" onclick="location.href='@Url.Action("Registry", "Account")'" />
+            </form>
         </div>
     </div>
 }
