--- a/Notes/Notes/Views/Shared/_Layout.cshtml
+++ b/Notes/Notes/Views/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+@if (User.Identity.IsAuthenticated)
+{
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -16,28 +18,23 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Notes", "ListNotes", "Note", new { area = "" }, new { @class = "navbar-brand" })
-                
+
+                @Html.ActionLink("Public notes", "PublicNotes", "Note", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("My notes", "MyNotes", "Note", new { @class = "navbar-brand" })
             </div>
 
-            @if (User.Identity.IsAuthenticated)
-            {
                 <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Мои заметки", "MyNotes", "Note", new { area = "" }, new { @class = "navbar-brand" })</li>
+                    <ul class="nav navbar-nav navbar-right">
                         <li><a>@User.Identity.Name</a> </li>
-                        <li>@Html.ActionLink("Выйти", "Logoff", "Account")</li>
+                        <li>@Html.ActionLink("Log Out", "Logoff", "Account")</li>
                     </ul>
                 </div>
-            }
+            
         </div>
     </div>
+}
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year – приложение ASP.NET</p>
-        </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
