--- a/Notes/Notes/Content/Site.css
+++ b/Notes/Notes/Content/Site.css
@@ -22,3 +22,14 @@ select,
 textarea {
     max-width: 280px;
 }
+
+div.horisont {
+    display: inline;
+    margin-right: 5px;
+   }
+
+
+
+
+
+/*sdfsdfsdf*/
