--- a/Notes/Notes/Content/bootstrap.css
+++ b/Notes/Notes/Content/bootstrap.css
@@ -24,6 +24,36 @@
 
 /* BASIC */
 
+
+.form-group input[type="checkbox"] {
+    display: normal;
+}
+
+.form-group input[type="checkbox"] + .btn-group > label span {
+    width: 20px;
+}
+
+.form-group input[type="checkbox"] + .btn-group > label span:first-child {
+    display: none;
+}
+.form-group input[type="checkbox"] + .btn-group > label span:last-child {
+    display: inline-block;   
+}
+
+.form-group input[type="checkbox"]:checked + .btn-group > label span:first-child {
+    display: inline-block;
+}
+.form-group input[type="checkbox"]:checked + .btn-group > label span:last-child {
+    display: none;   
+}
+
+
+
+
+
+
+
+
 html {
   background-color: #56baed;
 }
