--- a/Notes/Notes/Content/bootstrap.css
+++ b/Notes/Notes/Content/bootstrap.css
@@ -26,7 +26,7 @@
 
 
 .form-group input[type="checkbox"] {
-    display: normal;
+    display: none;
 }
 
 .form-group input[type="checkbox"] + .btn-group > label span {
